# bar_exam_covid

./: pyproject.toml  test_file.csv
bar_exam_covid/: __init__.py  __main__.py  loader.py  munger.py  visualizer.py
bar_exam_covid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bar_exam_covid.py
