[tool.poetry]
name = "bar_exam_covid"
version = "0.1.0"
description = "data loading, munging, and visualizing for COVID-19-related bar exam accommodations in 2020"
authors = ["WithPrecedent <coreyrayburnyung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.0.5"
gspread = "^3.6.0"
oauth2client = "^4.1.3"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
